# arduino-ide

./: .gitmodules  README.md  library.properties
examples/BasicThreshold/: BasicThreshold.ino
src/: .clang-format  .gitignore  CMakeLists.txt  README.md  embedDIP.h  embedDIP.hpp  embedDIPConfig.cmake.in  embedDIP_configs.h
src/.github/workflows/: code-quality.yml  doxygen-gh-pages.yml
src/arch/: fft_backend.h
src/arch/arm/: arch_profile.cmake  cm7_common.c  cm7_fft.c
src/arch/xtensa/: arch_profile.cmake  xtensa_common.cpp  xtensa_fft.cpp
src/board/: common.c  common.h
src/board/esp32/: board_esp32eye_memory.cpp  board_profile.cmake
src/board/stm32f7/: board_profile.cmake  board_stm32f7_memory.c  configs.h
src/core/: error.c  error.h  image.h  memory_manager.h
src/device/camera/: camera.h  esp32_ov2640.cpp  esp32_ov2640_old.cpp  stm32_ov5640.c  stm32_ov5640.h
src/device/display/: display.h  stm32_rk043fn48h.c
src/device/serial/: esp32_uart.cpp  serial.h  stm32_uart.c
src/docs/: Doxyfile  README.md
src/imgproc/: color.c  color.h  compress.c  compress.h  connectedcomponents.c  connectedcomponents.h  drawing.c  drawing.h  fft.c  fft.h  filter.c  filter.h  histogram.c  histogram.h  hough.c  hough.h  imgwarp.c  imgwarp.h  misc.c  misc.h  morph.c  morph.h  pixel.h  segmentation.c  segmentation.h  thresh.c  thresh.h
src/wrapper/: CameraWrapper.cpp  CameraWrapper.hpp  DisplayWrapper.cpp  DisplayWrapper.hpp  ImageWrapper.cpp  ImageWrapper.hpp  MemoryManager.hpp  SerialWrapper.cpp  SerialWrapper.hpp
